Generated/HessParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Hess.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class HessParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, BOARDPOSITION=21, IDENTIFIER=22, NATURAL_NUMBER=23, 
		CAP_LETTER=24, WS=25;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_defineBoard = 2, RULE_startGame = 3, 
		RULE_assignment = 4, RULE_moveList = 5, RULE_move = 6, RULE_moveExtra = 7, 
		RULE_constant = 8, RULE_player = 9, RULE_place = 10, RULE_placeType = 11, 
		RULE_boardpositionlist = 12, RULE_movetype = 13, RULE_collision = 14, 
		RULE_attacktype = 15, RULE_direction = 16;
	public static readonly string[] ruleNames = {
		"program", "line", "defineBoard", "startGame", "assignment", "moveList", 
		"move", "moveExtra", "constant", "player", "place", "placeType", "boardpositionlist", 
		"movetype", "collision", "attacktype", "direction"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'BOARD('", "')'", "'STARTGAME('", "','", "'='", "'{'", "'}'", 
		"'PLACE('", "'Direct'", "'Path'", "'true'", "'false'", "'ATTACK'", "'MOVE'", 
		"'ATKMOVE'", "'UP'", "'LEFT'", "'RIGHT'", "'DOWN'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "BOARDPOSITION", 
		"IDENTIFIER", "NATURAL_NUMBER", "CAP_LETTER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Hess.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static HessParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public HessParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public HessParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DefineBoardContext defineBoard() {
			return GetRuleContext<DefineBoardContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StartGameContext startGame() {
			return GetRuleContext<StartGameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			defineBoard();
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 35;
				line();
				}
				}
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 41;
			startGame();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 43;
			assignment();
			}
			State = 44;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefineBoardContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOARDPOSITION() { return GetToken(HessParser.BOARDPOSITION, 0); }
		public DefineBoardContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defineBoard; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterDefineBoard(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitDefineBoard(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefineBoard(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefineBoardContext defineBoard() {
		DefineBoardContext _localctx = new DefineBoardContext(Context, State);
		EnterRule(_localctx, 4, RULE_defineBoard);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			Match(T__1);
			State = 47;
			Match(BOARDPOSITION);
			State = 48;
			Match(T__2);
			State = 49;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartGameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(HessParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(HessParser.IDENTIFIER, i);
		}
		public StartGameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_startGame; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterStartGame(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitStartGame(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStartGame(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartGameContext startGame() {
		StartGameContext _localctx = new StartGameContext(Context, State);
		EnterRule(_localctx, 6, RULE_startGame);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			Match(T__3);
			State = 52;
			Match(IDENTIFIER);
			State = 53;
			Match(T__4);
			State = 54;
			Match(IDENTIFIER);
			State = 55;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(HessParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MoveListContext moveList() {
			return GetRuleContext<MoveListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlayerContext player() {
			return GetRuleContext<PlayerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaceContext place() {
			return GetRuleContext<PlaceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 8, RULE_assignment);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 57;
				Match(IDENTIFIER);
				State = 58;
				Match(T__5);
				State = 59;
				moveList();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 60;
				Match(IDENTIFIER);
				State = 61;
				Match(T__5);
				State = 62;
				player();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 63;
				Match(IDENTIFIER);
				State = 64;
				Match(T__5);
				State = 65;
				place();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 66;
				Match(IDENTIFIER);
				State = 67;
				Match(T__5);
				State = 68;
				constant();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MoveListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MoveContext[] move() {
			return GetRuleContexts<MoveContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MoveContext move(int i) {
			return GetRuleContext<MoveContext>(i);
		}
		public MoveListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moveList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterMoveList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitMoveList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMoveList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MoveListContext moveList() {
		MoveListContext _localctx = new MoveListContext(Context, State);
		EnterRule(_localctx, 10, RULE_moveList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(T__6);
			State = 72;
			move();
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__4) {
				{
				{
				State = 73;
				Match(T__4);
				State = 74;
				move();
				}
				}
				State = 79;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 80;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MoveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MovetypeContext movetype() {
			return GetRuleContext<MovetypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CollisionContext collision() {
			return GetRuleContext<CollisionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttacktypeContext attacktype() {
			return GetRuleContext<AttacktypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectionContext direction() {
			return GetRuleContext<DirectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MoveExtraContext moveExtra() {
			return GetRuleContext<MoveExtraContext>(0);
		}
		public MoveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_move; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterMove(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitMove(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMove(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MoveContext move() {
		MoveContext _localctx = new MoveContext(Context, State);
		EnterRule(_localctx, 12, RULE_move);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			movetype();
			State = 83;
			collision();
			State = 84;
			attacktype();
			State = 85;
			direction();
			State = 86;
			moveExtra();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MoveExtraContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NATURAL_NUMBER() { return GetTokens(HessParser.NATURAL_NUMBER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NATURAL_NUMBER(int i) {
			return GetToken(HessParser.NATURAL_NUMBER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectionContext direction() {
			return GetRuleContext<DirectionContext>(0);
		}
		public MoveExtraContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moveExtra; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterMoveExtra(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitMoveExtra(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMoveExtra(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MoveExtraContext moveExtra() {
		MoveExtraContext _localctx = new MoveExtraContext(Context, State);
		EnterRule(_localctx, 14, RULE_moveExtra);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 88;
				Match(NATURAL_NUMBER);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 89;
				Match(NATURAL_NUMBER);
				State = 90;
				direction();
				State = 91;
				Match(NATURAL_NUMBER);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 93;
				direction();
				State = 94;
				Match(NATURAL_NUMBER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NATURAL_NUMBER() { return GetToken(HessParser.NATURAL_NUMBER, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantContext constant() {
		ConstantContext _localctx = new ConstantContext(Context, State);
		EnterRule(_localctx, 16, RULE_constant);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			Match(NATURAL_NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PlayerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PlaceTypeContext[] placeType() {
			return GetRuleContexts<PlaceTypeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaceTypeContext placeType(int i) {
			return GetRuleContext<PlaceTypeContext>(i);
		}
		public PlayerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_player; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterPlayer(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitPlayer(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlayer(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PlayerContext player() {
		PlayerContext _localctx = new PlayerContext(Context, State);
		EnterRule(_localctx, 18, RULE_player);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(T__6);
			State = 101;
			placeType();
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__4) {
				{
				{
				State = 102;
				Match(T__4);
				State = 103;
				placeType();
				}
				}
				State = 108;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 109;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PlaceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(HessParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BoardpositionlistContext boardpositionlist() {
			return GetRuleContext<BoardpositionlistContext>(0);
		}
		public PlaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_place; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterPlace(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitPlace(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PlaceContext place() {
		PlaceContext _localctx = new PlaceContext(Context, State);
		EnterRule(_localctx, 20, RULE_place);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			Match(T__8);
			State = 112;
			Match(IDENTIFIER);
			State = 113;
			Match(T__4);
			State = 114;
			boardpositionlist();
			State = 115;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PlaceTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PlaceContext place() {
			return GetRuleContext<PlaceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(HessParser.IDENTIFIER, 0); }
		public PlaceTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_placeType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterPlaceType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitPlaceType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlaceType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PlaceTypeContext placeType() {
		PlaceTypeContext _localctx = new PlaceTypeContext(Context, State);
		EnterRule(_localctx, 22, RULE_placeType);
		try {
			State = 119;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__8:
				EnterOuterAlt(_localctx, 1);
				{
				State = 117;
				place();
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 118;
				Match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoardpositionlistContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BOARDPOSITION() { return GetTokens(HessParser.BOARDPOSITION); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOARDPOSITION(int i) {
			return GetToken(HessParser.BOARDPOSITION, i);
		}
		public BoardpositionlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boardpositionlist; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.EnterBoardpositionlist(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IHessListener typedListener = listener as IHessListener;
			if (typedListener != null) typedListener.ExitBoardpositionlist(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHessVisitor<TResult> typedVisitor = visitor as IHessVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoardpositionlist(this);
			else return visitor.VisitChildren(this);
		}
	}
